--- a/ToDo.txt
+++ b/ToDo.txt
@@ -16,13 +16,21 @@ Marco:
     - Salva su file pdf
   - Appuntamenti:
     - Fare le funzioni di aggiunte, modifica e rimozione
-    - Funzione di ricerca tramite filtro
   - Impostazioni: 
     - trovare qualcosa da fare
     - attivare il checkbox per il font dislessia
+    
+  - Funzioni db per popolare
+  - Popolare gli appuntamenti per le statistiche 
+  - Cancellare profilo
+  
 Mario:
   - Servizio 
   - Dipendenti
   - Pagine login
   - Pagine Welcome
   - Pagine Registrazione
+
+  - Generazione degli alert
+  - Css combo box
+  - Font dislessia
